Fix crossword rendering on safari and mobile browsers

--- a/src/App/Crossword/Crossword.module.scss
+++ b/src/App/Crossword/Crossword.module.scss
@@ -58,6 +58,8 @@
 }
 
 .cell {
+  width: 100%;
+
   cursor: pointer;
 
   &.dark {
